--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,7 @@ numpy>=2.3.3
 
 scikit-learn>=1.7.2
 xgboost>=3.0.5
-tensorflow>=2.20.0
-keras>=3.11.3
-transformers>=4.57.0
 matplotlib>=3.10.7
 seaborn>=0.13.2
 streamlit>=1.50.0
-Flask>=3.1.2
+imbalanced-learn>=0.14.0
