--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,7 +1,15 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
+
 plotly>=5.15.0
-seaborn>=0.12.0
-matplotlib>=3.7.0
+requests>=2.32.5
+pandas>=2.3.3
+numpy>=2.3.3
+scikit-learn>=1.7.2
+xgboost>=3.0.5
+tensorflow>=2.20.0
+keras>=3.11.3
+transformers>=4.57.0
+matplotlib>=3.10.7
+seaborn>=0.13.2
+streamlit>=1.50.0
+Flask>=3.1.2
+imbalanced-learn>=0.14.0
